objects/maps__LiveSummaryStateMileage__c.object
<CustomObject>
    <fields>
        <fullName>maps__Country__c</fullName>
        <description>The 3 character country code</description>
        <inlineHelpText>The 3 character country code</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>Not_Specified</fullName>
                    <label>Not Specified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__LiveAssetDailySummary__c</fullName>
        <description>Live Asset Daily Summary record to which this mileage relates</description>
        <inlineHelpText>Live Asset Daily Summary record to which this mileage relates</inlineHelpText>
        <label>Live Asset Daily Summary</label>
        <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
        <relationshipLabel>Live Summary State Mileages</relationshipLabel>
        <relationshipName>LiveSummaryStateMileages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__ReportDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__StateProvince__c</fullName>
        <description>The associated state or province for this record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The associated state or province for this record</inlineHelpText>
        <label>State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TotalDistanceTraveledKm__c</fullName>
        <label>Total Distance Traveled (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalDistanceTraveledMiles__c</fullName>
        <description>Total distance traveled in miles within this state.</description>
        <formula>ROUND(maps__TotalDistanceTraveledKm__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total distance traveled in miles within this state.</inlineHelpText>
        <label>Total Distance Traveled (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Maps Live Summary State Mileage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Live Summary State Mileage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Summary State Mileages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>